<resources>
    <string name="app_name">UniPet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentdescription">contentDescription</string>
    <string name="content_intro_01">UniPet - Mua sắm thú vị, đọc blog hữu ích! 🐾</string>
    <string name="content_intro_02">Tại UniPet, bạn sẽ được khám phá một thế giới đa dạng của các sản phẩm từ thực phẩm cho đến đồ chơi dành cho thú cưng. Hãy trải nghiệm mua sắm thuận tiện và đầy đủ tại cửa hàng của chúng tôi! 🐾</string>
    <string name="content_intro_03">Tại đây, bạn sẽ tìm thấy những bài viết hữu ích về chăm sóc và nuôi dưỡng thú cưng. Hãy tham khảo và chia sẻ kiến thức cùng cộng đồng yêu thú cưng của UniPet nhé!</string>
    <string name="bo_qua">BỎ QUA</string>
    <string name="tiep_tuc">TIẾP TỤC</string>
    <string name="bat_dau_thoi">BẮT ĐẦU THÔI</string>
    <string name="intro_title_1">Hé lô! UniPet đây!</string>
    <string name="intro_title_2">Khám Phá Cửa Hàng!</string>
    <string name="intro_title_3">Đọc Blog Hữu Ích!</string>
    <string name="da_co_tai_khoan">Sen đã đăng ký ?</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="signIn_CTA">Hãy nhập thông tin đăng nhập của bạn để khám phá thế giới UniPet!</string>
    <string name="email">Email\n</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sen_moi_den">Sen mới đến ?</string>
    <string name="signUp_CTA">Nhập thông tin để tham gia vào UniPet ngay hôm nay để nhận được nhiều ưu đãi!</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="terms_and_conditions">Bằng cách nhấn nút Đăng Ký, bạn đã đồng ý với các Điều Khoản và Dịch Vụ của UniPet</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="sen_da_dang_ky">Sen đã đăng ký ?</string>
    <string name="message_sample"># Message</string>
    <string name="message_details">Chi tiết nội dung thành công</string>
    <string name="ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="title_sample"># Title Dialog</string>
    <string name="DiscountVoucher">Voucher Giảm giá</string>
    <string name="ShippingVoucher">Voucher Vận chuyển</string>
    <string name="ButtonApply">XÁC NHẬN</string>
    <string name="home">Trang Chủ</string>
    <string name="product_nav">Sản Phẩm</string>
    <string name="love">Yêu Thích</string>
    <string name="profile_nav">Tài Khoản</string>
    <string name="detailorder">Thông tin đơn hàng</string>
    <string name="sign_out_dialog_title">Đăng Xuất Tài Khoản ?</string>
    <string name="insert_email_fgpw_cta">Vui lòng nhập Email đăng ký của bạn để thay đổi mật khẩu.</string>
    <string name="update_phone_nu_cta">Vui lòng cập nhật số điện thoại của bạn</string>
    <string name="update_phone_cta">Cập nhật số điện thoại của bạn tại đây</string>
    <string name="err">lỗi</string>
</resources>