<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.onboarding.OnBoardThirdScreen">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentdescription"
        android:scaleType="centerCrop"
        android:src="@drawable/dog_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_intro_content_layer"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView">

        <TextView
            style="@style/HEAD1_BOLD_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="9dp"
            android:text="@string/intro_title_3"
            android:textSize="30sp" />

        <TextView
            style="@style/HEAD4_BOLD_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            android:lineHeight="28.5dp"
            android:text="@string/content_intro_03"
            android:textColor="@color/darkTertiary" />

        <Button
            android:id="@+id/btn_intro_third_screen"
            style="@style/HEAD4_BOLD_20"
            android:layout_width="367dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/brandPrimary"
            android:drawableEnd="@drawable/next_btn_intro_white"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/bat_dau_thoi" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/BODY_LARGE_REGULAR_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/da_co_tai_khoan"
                android:textColor="@color/darkPrimary" />

            <TextView
                style="@style/BODY_LARGE_BOLD_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dang_nhap"
                android:textColor="@color/brandPrimary" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>