<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.onboarding.OnBoardSecondScreen">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dog_1"
        android:contentDescription="@string/contentdescription"/>

    <TextView
        android:id="@+id/tv_skip_intro_screen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bo_qua"
        android:layout_gravity="end"
        android:padding="25dp"
        android:layout_marginEnd="10dp"
        style="@style/HEAD4_BOLD_20"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/bg_intro_content_layer"
        android:gravity="center_horizontal|bottom"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_title_2"
            style="@style/HEAD1_BOLD_32"
            android:layout_gravity="center"
            android:layout_marginBottom="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_intro_02"
            style="@style/HEAD4_BOLD_20"
            android:textColor="@color/darkTertiary"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineHeight="28.5dp"
            android:layout_marginBottom="26dp"/>

        <Button
            android:id="@+id/btn_intro_sc_screen"
            android:layout_width="367dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/brandPrimary"
            android:text="@string/tiep_tuc"
            android:gravity="center"
            android:drawableEnd="@drawable/next_btn_intro_white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="38dp"
            style="@style/HEAD4_BOLD_20"
            />

    </LinearLayout>

</FrameLayout>