<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="243dp"
            android:layout_height="243dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:src="@drawable/intro_logo"
            android:contentDescription="@string/contentdescription"/>

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="54dp"
            android:layout_gravity="center"
            android:text="@string/signUp_CTA"
            style="@style/HEAD6_BOLD_16"
            android:textColor="@color/brandPrimary"/>

        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorstates"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/darkTertiary">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/mail_hint_edtext"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorstates"
                app:boxStrokeWidth="1dp"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/brandPrimary"
                app:hintTextColor="@color/darkTertiary">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pwd_edt_hint"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorstates"
                app:boxStrokeWidth="1dp"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/brandPrimary"
                app:hintTextColor="@color/darkTertiary">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/re_pwd_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pwd_edt_hint"
                    android:drawablePadding="10dp"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/brandPrimary"/>
                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    style="@style/BODY_MED_MED_14"
                    android:textColor="@color/darkSecondary"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                style="@style/HEAD3_BOLD_24"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sen_da_dang_ky"
            style="@style/BODY_LARGE_REGULAR_16"
            android:textColor="@color/darkPrimary"
            android:gravity="end"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/tv_sign_in_cta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/BODY_LARGE_BOLD_16"
            android:textColor="@color/brandPrimary"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>