<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignIn">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="243dp"
                android:layout_height="243dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/contentdescription"
                android:src="@drawable/intro_logo" />

            <TextView
                style="@style/HEAD6_BOLD_16"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="54dp"
                android:gravity="center"
                android:text="@string/signIn_CTA"
                android:textColor="@color/brandPrimary" />

            <LinearLayout
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:boxStrokeColor="@color/colorstates"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/darkTertiary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_email_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/mail_hint_edtext"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:boxStrokeColor="@color/colorstates"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/darkTertiary"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/brandPrimary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/pwd_edt_hint"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/BODY_XL_MED_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/brandPrimary" />

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/HEAD3_BOLD_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="220dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/BODY_LARGE_REGULAR_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:text="@string/sen_moi_den"
                    android:textColor="@color/darkPrimary" />

                <TextView
                    android:id="@+id/tv_sign_up_cta"
                    style="@style/BODY_LARGE_BOLD_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Đăng Ký"
                    android:textColor="@color/brandPrimary" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="93dp" />

</androidx.constraintlayout.widget.ConstraintLayout>