<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardCornerRadius="12dp"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_sample"
                style="@style/HEAD4_BOLD_20"
                android:textColor="@color/darkPrimary"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/darkSecondary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_message_details_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_details"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/BODY_LARGE_REGULAR_16"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_cancel_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:textColor="@color/brandPrimary"
                    android:background="@drawable/btn_outlined"
                    style="@style/BODY_XL_MED_18"
                    android:layout_marginEnd="10dp"/>
                <Button

                    android:id="@+id/btn_ok_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@android:color/white"
                    style="@style/BODY_XL_MED_18"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>